// Copyright 2024 aggronmagi <czy463@163.com>
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//	http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package redis;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/walleframe/pb_plugins/extend/redis";

extend google.protobuf.FileOptions {
    string op_package = 21000 [retention = RETENTION_SOURCE];
}

message RedisScript {
    string name  = 1 [retention = RETENTION_SOURCE];
    string lua   = 2 [retention = RETENTION_SOURCE];
    string argv  = 3 [retention = RETENTION_SOURCE];
    string reply = 4 [retention = RETENTION_SOURCE];
}

extend google.protobuf.MessageOptions {
    string               key      = 21100 [retention = RETENTION_SOURCE];
    string               type     = 21101 [retention = RETENTION_SOURCE];
    int32                size     = 21102 [retention = RETENTION_SOURCE];
    bool                 op_field = 21103 [retention = RETENTION_SOURCE];
    string               field    = 21104 [retention = RETENTION_SOURCE];
    string               value    = 21105 [retention = RETENTION_SOURCE];
    string               member   = 21106 [retention = RETENTION_SOURCE];
    repeated RedisScript script   = 21107 [retention = RETENTION_SOURCE];
    bool                 json     = 21108 [retention = RETENTION_SOURCE];
    bool                 pb       = 21109 [retention = RETENTION_SOURCE];
}
